opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/hardcaml"
bug-reports: "https://github.com/janestreet/hardcaml/issues"
dev-repo: "git+https://github.com/janestreet/hardcaml.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/hardcaml/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "base"
  "bignum"
  "bin_prot"
  "core"
  "core_kernel"
  "jane_rope"
  "ppx_compare"
  "ppx_jane"
  "ppx_rope"
  "ppx_sexp_conv"
  "sexplib"
  "splittable_random"
  "stdio"
  "dune"              {>= "3.17.0"}
  "ppxlib"            {= "0.33.0+ox"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "RTL Hardware Design in OCaml"
description: "
Hardcaml is an embedded DSL for designing and simulating hardware in OCaml.
Generic hardware designs are easily expressed using features such as higher
order functions, lists, maps etc.  A built in simulator allows designs to
be simulated within Hardcaml.  Designs are converted to either Verilog or
VHDL to interact with standard back end tooling.
"
