(library
 (foreign_stubs
  (language c)
  (names bits_stubs))
 (name hardcaml)
 (public_name hardcaml)
 (libraries base bin_prot core core_kernel.flags base.md5 sexplib stdio
   zarith)
 (preprocess
  (pps ppx_jane ppx_hardcaml0))
 (ocamlopt_flags
  :standard
  (:include ocamlopt-flags)))

(rule
 (targets ocamlopt-flags)
 (deps)
 (action
  (bash "echo '()' > ocamlopt-flags")))
