(library
 (foreign_stubs
  (language c)
  (names bits_stubs))
 (name hardcaml)
 (public_name hardcaml)
 (libraries bignum.bigint bin_prot core core_kernel.flags base.md5 jane_rope
   sexplib splittable_random stdio)
 (preprocess
  (pps ppx_jane ppx_hardcaml0 ppx_rope -require-template-extension))
 (ocamlopt_flags
  :standard
  (:include ocamlopt-flags)))

(rule
 (targets ocamlopt-flags)
 (deps)
 (action
  (bash "echo '()' > ocamlopt-flags")))

(rule
 (targets tools_config.ml)
 (deps)
 (action
  (bash
    "cat <<EOF > tools_config.ml\nlet iverilog = \"iverilog\"\nlet ghdl = \"ghdl\"\nlet verilator_v4 = \"verilator\"\nlet verilator_v5 = \"verilator\"\nlet default_verilator_version = 4\nlet minisat = \"minisat\"\nlet picosat = \"picosat\"\nlet z3 = \"z3\"\nlet nusmv = \"NuSMV\"\nlet yosys = \"yosys\"\nEOF")))
